<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_card"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvDialogCategoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_budget"

        android:gravity="center"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/editLimitAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_amount"
        android:inputType="numberDecimal"
        android:background="@drawable/bg_input"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/btnCancelBudget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/textPrimary"
            android:background="?attr/selectableItemBackgroundBorderless" />

        <Button
            android:id="@+id/btnSaveBudget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/primaryBlue"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackgroundBorderless" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="end"
        android:src="@drawable/ic_close"
        app:tint="@color/textPrimary"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/close" />
</LinearLayout>
